Register page added

--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -1,6 +1,6 @@
 html * {
   font-family: Rockwell, "Courier New", Courier, Georgia, Times,
-  "Times New Roman", serif;
+    "Times New Roman", serif;
   text-decoration: none;
 }
 
@@ -75,7 +75,7 @@ nav .search-container button:hover {
   font-size: 66px;
   margin-right: 5px;
 }
-.dropdownMenu{
+.dropdownMenu {
   position: absolute;
   left: auto !important;
   top: auto !important;
@@ -87,20 +87,20 @@ nav .search-container button:hover {
   border-top: none;
   border-radius: 0px 0px 6px 6px;
 }
-.dropdownText{
-  font-size: 1.20rem;
+.dropdownText {
+  font-size: 1.2rem;
 }
-.dropdownText:hover{
+.dropdownText:hover {
   background-color: #ccc;
 }
-.searchMobile{
+.searchMobile {
   display: none;
   font-size: 35px;
   color: black;
   border: none;
   background: transparent;
 }
-.searchMobile:hover{
+.searchMobile:hover {
   color: #707070;
 }
 .navbarHubIconMobile {
@@ -113,11 +113,11 @@ nav .search-container button:hover {
 }
 
 @media (max-width: 844px) {
-  .navbarCollapse{
+  .navbarCollapse {
     width: 100vw;
     justify-content: space-evenly;
   }
-  .navbarHubIcon{
+  .navbarHubIcon {
     display: none;
   }
   .navbarHubIconMobile {
@@ -155,4 +155,57 @@ nav .search-container button:hover {
 /* QuestionHead */
 .wrap-text {
   word-wrap: break-word;
+}
+
+/* Register Login */
+h1.title {
+  font-size: 50px;
+  font-family: "Passion One", cursive;
+  font-weight: 400;
+}
+
+hr {
+  width: 10%;
+  color: #fff;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  margin-bottom: 15px;
+}
+
+input,
+input::-webkit-input-placeholder {
+  font-size: 11px;
+  padding-top: 3px;
+}
+
+.main-login {
+  background-color: #fff;
+  /* shadows and rounded borders */
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.main-center {
+  margin-top: 30px;
+  margin: 0 auto;
+  max-width: 330px;
+  padding: 40px 40px;
+}
+
+.login-button {
+  margin-top: 5px;
+}
+
+.login-register {
+  font-size: 11px;
+  text-align: center;
 }
