Add initial styling for the page

--- a/Abracadabra/abracadabra_web_app/src/css/main.scss
+++ b/Abracadabra/abracadabra_web_app/src/css/main.scss
@@ -1,6 +1,7 @@
 // Components
 @import './components/bubbles';
 @import './components/navbarModal';
+@import './components/question';
 
 // Variables
 @import './variables';
