service and http-common added

--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -186,16 +186,17 @@ input::-webkit-input-placeholder {
 .main-login {
   background-color: #fff;
   /* shadows and rounded borders */
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  /* border-style: ridge; */
+  -moz-border-radius: 1px;
+  -webkit-border-radius: 1px;
+  border-radius: 1px;
+  -moz-box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .main-center {
-  margin-top: 30px;
+  margin-top: 100px;
   margin: 0 auto;
   max-width: 330px;
   padding: 40px 40px;
