Add axios for API

--- a/Abracadabra/abracadabra_web_app/src/css/main.scss
+++ b/Abracadabra/abracadabra_web_app/src/css/main.scss
@@ -2,6 +2,7 @@
 @import './components/bubbles';
 @import './components/navbarModal';
 @import './components/question';
+@import './components/questionForm';
 
 // Variables
 @import './variables';
