--- a/Abracadabra/abracadabra_web_app/src/css/components/_question.scss
+++ b/Abracadabra/abracadabra_web_app/src/css/components/_question.scss
@@ -24,8 +24,8 @@
 }
 
 .questionAvatar {
-    width: 80px;
-    height: 80px;
+    width: 40px;
+    height: 40px;
     margin-right: 0.5rem;
     border: 1px black solid;
 }
@@ -152,4 +152,12 @@
     p {
         color: #707070;
     }
+}
+
+.answerContentText {
+    font-size: 1.2vw;
+}
+
+.helpedText {
+    font-size: 1vw;
 }
