--- a/Abracadabra/abracadabra_admin_panel/styles/globals.css
+++ b/Abracadabra/abracadabra_admin_panel/styles/globals.css
@@ -1,16 +1,9 @@
 html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+body,
+body > div:first-child,
+div#__next{
+  height: 100%;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+#__next-prerender-indicator {
+  display: none;
 }
