--- a/Abracadabra/abracadabra_admin_panel/styles/scss/components/NavBar.scss
+++ b/Abracadabra/abracadabra_admin_panel/styles/scss/components/NavBar.scss
@@ -7,4 +7,7 @@
    .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
         color: darken($tertiary-color, 5%);
    }
+   .navbar-nav .Nav-color {
+    color: $text-color;
+}
 }
