Migrate scss files to the new folder

--- a/Abracadabra/abracadabra_web_app/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/navbarModal";
 @import "./components/question";
 @import "./components/questionForm";
+@import './components/filterButtons';
 
 //global style
 @import "./custom";
