Admin dashboard, mobile friendly, full design

--- a/Abracadabra/abracadabra_admin_panel/styles/scss/components/SideBar.scss
+++ b/Abracadabra/abracadabra_admin_panel/styles/scss/components/SideBar.scss
@@ -1,7 +1,7 @@
 .Default-Sidebar {
     background-color: $secondary-color;
     color: $text-color;
-    height: 100vh;
+    height: 100%;
    a.wrap {
        color: $text-color;
        :hover {
