--- a/Abracadabra/abracadabra_admin_panel/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_admin_panel/styles/scss/main.scss
@@ -3,5 +3,6 @@
 //styles
 @import './components/NavBar';
 @import './components/SideBar';
+@import './components/Dashboard';
 //global style
 @import './custom';
