Fixed mt-5 styling

--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -108,7 +108,7 @@ nav {
   background-color: #373a3c;
   color: #ffffff;
 }
-.mt-5 {
+.BodyQuestion-top {
   margin-top: 20px !important;
 }
 .BodyQuestionText {
