Started making the question page

--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -1,3 +1,7 @@
+/* 
+    MIGRATE TO SCSS
+*/
+
 /* html * {
   font-family: Rockwell, "Courier New", Courier, Georgia, Times,
     "Times New Roman", serif;
