--- a/Abracadabra/abracadabra_admin_panel/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_admin_panel/styles/scss/main.scss
@@ -4,5 +4,6 @@
 @import './components/NavBar';
 @import './components/SideBar';
 @import './components/Dashboard';
+@import './components//Login';
 //global style
 @import './custom';
