Created new CreateQuestion

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_questionForm.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_questionForm.scss
@@ -4,6 +4,7 @@
     margin-top: 2rem;
     padding: 4rem;
     width: 55vw;
+    background-color: $special-color;
 
     @media (max-width: 1290px) { 
         width: 60vw;
