--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -112,7 +112,7 @@ nav {
   background-color: #373a3c;
   color: #ffffff;
 }
-.BodyQuestion-top {
+.BodyQuestion-Top {
   margin-top: 20px !important;
 }
 .BodyQuestionText {
@@ -132,6 +132,7 @@ nav {
   color: #fff;
   background-color: #17a2b8;
 }
+
 .BodyQuestion-CardBody {
   background-color: #373a3c;
 }
@@ -202,4 +203,29 @@ input::-webkit-input-placeholder {
 .login-register {
   font-size: 11px;
   text-align: center;
+}
+/* tags */
+.tags-input{
+  background: none;
+    color: white;
+    border: none;
+    min-width: 0;
+    width: 50px;
+    font-size: 0.75rem;
+}
+.tags-input::placeholder {
+ color:rgba(255, 255, 255, 0.788);
+}
+.tags-button-remove {
+  border:none;
+  margin-left: 2px;
+}
+.tags-button-plus {
+  border:none;
+  margin-left: 2px;
+  padding-top: 0.55rem !important;
+}
+.tags-margin {
+  margin-right: 10px;
+  align-items: center;
 }
