--- a/Abracadabra/abracadabra_admin_panel/styles/scss/components/NavBar.scss
+++ b/Abracadabra/abracadabra_admin_panel/styles/scss/components/NavBar.scss
@@ -3,6 +3,16 @@
     color: $text-color;
     .navbar-nav .nav-link {
         color: $tertiary-color;
+        &:active {
+            color: $tertiary-color;
+        }
+    }
+    // active color fix
+    .navbar-nav .nav-link.active {
+        color: $tertiary-color;
+        &:active {
+            color: $tertiary-color;
+        }
     }
    .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
         color: darken($tertiary-color, 5%);
