--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -232,3 +232,27 @@ input::-webkit-input-placeholder {
 .editUserContainer {
   background-color: #373a3c;
 }
+
+.divpartsubject {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 0.35rem;
+  padding-bottom: 0%;
+  border-radius: 5px;
+  background-color: #373a3c;
+  color: #ffffff;
+}
+
+.subjectlistIndicator {
+  color: #17a2b8;
+}
+
+.divpartsubject:hover {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 0.35rem;
+  padding-bottom: 0%;
+  border-radius: 5px;
+  background-color: #4c4c50;
+  color: #ffffff;
+}
