changed filter buttons to work better?!

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_filterButtons.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_filterButtons.scss
@@ -1,14 +1,14 @@
 /* FilterButtons */
 .btnSmall {
     margin-top: 25px;
-    margin-right: 10px;
+    // margin-right: 10px;
     border: none;
     min-width: 70px;
   }
 
 .btnBig {
     margin-top: 25px;
-    margin-left: 10px;
+    // margin-left: 10px;
     border: none;
     min-width: 100px;
   }
