Added loginpage styling

--- a/Abracadabra/abracadabra_web_app/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/question";
 @import "./components/questionForm";
 @import './components/filterButtons';
+@import './components/Login';
 
 //global style
 @import "./custom";
