Initial expert answer checkmark on question added

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
@@ -122,3 +122,9 @@
 .giveAnAnswerArrows {
   font-size: 2rem;
 }
+
+.questionExpertTick {
+  font-size: 1.4rem;
+  margin-top: 0.4rem;
+  align-self: center;
+}
