--- a/Abracadabra/abracadabra_admin_panel/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_admin_panel/styles/scss/main.scss
@@ -5,5 +5,6 @@
 @import './components/SideBar';
 @import './components/Dashboard';
 @import './components//Login';
+@import './components/Modal';
 //global style
 @import './custom';
