Some styling changes + Added toast

--- a/Abracadabra/abracadabra_web_app/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./components/questionForm";
 @import './components/filterButtons';
 @import './components/Login';
+@import './components/Linkstyle.scss';
 
 //global style
 @import "./custom";
