--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -292,3 +292,27 @@ input::-webkit-input-placeholder {
   padding-right: 0.4rem;
   border-radius: 5px;
 }
+
+.hoverDetails {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.hoverDetails .hoverDetailstext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the hoverDetails */
+  position: absolute;
+  z-index: 1;
+}
+
+.hoverDetails:hover .hoverDetailstext {
+  visibility: visible;
+}
