--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
@@ -69,6 +69,12 @@
         font-size: 1.4rem;
         margin: 0px 2px;
       }
+      .votingArrowVoted {
+        cursor: pointer;
+        font-size: 1.4rem;
+        margin: 0px 2px;
+        color: red;
+      }
 
       p {
         margin: 0px;
