VOTING WORKS FOR QUESTION

--- a/Abracadabra/abracadabra_web_app/src/App.css
+++ b/Abracadabra/abracadabra_web_app/src/App.css
@@ -274,3 +274,15 @@ input::-webkit-input-placeholder {
 .navbar-textcolor:hover {
   color: #4c4c50;
 }
+
+.votingArrow {
+  cursor: pointer;
+  font-size: 1.4rem;
+  margin: 0px 2px;
+}
+.votingArrowVoted {
+  cursor: pointer;
+  font-size: 1.4rem;
+  margin: 0px 2px;
+  color: red;
+}
