--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
@@ -28,6 +28,29 @@
       margin: 2rem 2px 0 0;
     }
   }
+  .votingDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    .votingArrow {
+      cursor: pointer;
+      font-size: 1.4rem;
+      margin: 0px 2px;
+    }
+    .votingArrowVoted {
+      cursor: pointer;
+      font-size: 1.4rem;
+      margin: 0px 2px;
+      color: red;
+    }
+
+    p {
+      padding-top: 5px;
+      margin-right: 3px;
+      font-size: 1rem;
+    }
+  }
 
   .questionUsername {
     font-size: 1.5rem;
@@ -77,7 +100,8 @@
       }
 
       p {
-        margin: 0px;
+        padding-top: 4px;
+        margin-right: 8px;
         font-size: 1rem;
       }
     }
